<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference 
        android:key="same_url" 
        android:title="@string/same_url_title" 
        android:defaultValue="true"/>
    <EditTextPreference 
        android:key="raspberry_url" 
        android:title="@string/raspberry_url_title" 
        android:summary="@string/raspberry_url_summ" 
        android:enabled="true" 
        android:dependency="same_url"/>
    <EditTextPreference 
        android:key="webiopi_url" 
        android:title="@string/webiopi_url_title"
        android:enabled="false" 
        android:dependency="same_url"/>
    <EditTextPreference 
        android:key="mjpgstream_url" 
        android:title="@string/mjpgstream_url_title" 
        android:enabled="false" 
        android:dependency="same_url"/>
    <EditTextPreference 
        android:key="webiopi_port" 
        android:title="@string/webiopi_port_title" 
        android:defaultValue="80"/>   
    <EditTextPreference 
        android:key="mjpgstream_port" 
        android:title="@string/mjpgstream_port_title"
        android:defaultValue="8080"/>
    
    

    

</PreferenceScreen>